[gd_scene format=3 uid="uid://6bn5un8hvgrg"]

[ext_resource type="Script" uid="uid://b1s0bdmc3o1lw" path="res://scripts/multiplayer.gd" id="1_cnjq1"]
[ext_resource type="PackedScene" uid="uid://740761bpqiw2" path="res://scenes/PlayerField.tscn" id="2_20mca"]
[ext_resource type="Script" uid="uid://dd8i0dnsqivr" path="res://scripts/game_loop.gd" id="4_i0u6e"]
[ext_resource type="FontFile" uid="uid://b4ucaw12l0s1n" path="res://assets/BigBlueTermPlusNerdFontMono-Regular.ttf" id="5_8xah2"]
[ext_resource type="Script" uid="uid://c7oif0iu8su4u" path="res://scripts/input_manager.gd" id="5_bb0ps"]
[ext_resource type="Script" uid="uid://cmfojul2w2di5" path="res://scripts/score_counter.gd" id="6_bb0ps"]
[ext_resource type="Script" uid="uid://dysimglxa1o8a" path="res://scripts/hp_bar.gd" id="7_ckpor"]

[node name="Main2" type="Node2D" unique_id=1492515000]
texture_filter = 1
script = ExtResource("1_cnjq1")
player_field_scene = ExtResource("2_20mca")

[node name="HostButton" type="Button" parent="." unique_id=836699671]
offset_left = 1296.0
offset_top = 704.0
offset_right = 1352.0
offset_bottom = 736.0
text = "HOST"

[node name="JoinButton" type="Button" parent="." unique_id=1228987666]
offset_left = 1216.0
offset_top = 704.0
offset_right = 1272.0
offset_bottom = 736.0
text = "JOIN"

[node name="GameLoop" type="Node" parent="." unique_id=1698302306]
script = ExtResource("4_i0u6e")

[node name="DiscardButton" type="Button" parent="." unique_id=124394224]
visible = false
offset_left = 1300.0
offset_top = 1335.0
offset_right = 1480.0
offset_bottom = 1400.0
theme_override_fonts/font = ExtResource("5_8xah2")
disabled = true
text = "Discard"

[node name="PlayButton" type="Button" parent="." unique_id=1583530075]
visible = false
offset_left = 1080.0
offset_top = 1335.0
offset_right = 1260.0
offset_bottom = 1400.0
theme_override_fonts/font = ExtResource("5_8xah2")
disabled = true
text = "Play"

[node name="InputManager" type="Node2D" parent="." unique_id=1910517496]
scale = Vector2(2, 2)
script = ExtResource("5_bb0ps")

[node name="ScoreCounter" type="Node2D" parent="." unique_id=39562879]
visible = false
script = ExtResource("6_bb0ps")

[node name="HPBar" type="CanvasLayer" parent="." unique_id=1042759370]
visible = false
script = ExtResource("7_ckpor")

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="DiscardButton" to="GameLoop" method="_on_discard_pressed"]
[connection signal="pressed" from="PlayButton" to="GameLoop" method="_on_play_button_pressed"]
